assert-struct/tests/snapshots/nested_field_access__deep_nested_mismatch.snap
---
source: assert-struct/tests/nested_field_access.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_field_access_errors/deep_nested_mismatch.rs:29:30
   |
29 |         level2.level3.value: "expected",  // Should be "actual", will fail
   |                              ^^^^^^^^^^ got "actual"
